Unify activated abilities into ActivatedAbility model with ability picker UI
Replace separate tapActivatedAbilityCost/manaActivatedAbilityCost fields and
TAP_ACTIVATED_ABILITY/MANA_ACTIVATED_ABILITY effect slots with a single
List<ActivatedAbility> on Card. Each ActivatedAbility bundles its own cost,
tap requirement, effects, targeting, and description.

Add Arcanis the Omnipotent (two activated abilities) and ReturnSelfToHandEffect.
Migrate all 16 cards with activated abilities to the new model. Frontend shows
an ability picker when a permanent has multiple usable abilities, and handles
targeting and X-cost prompts per-ability.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>