@@ -1,7 +1,7 @@
 package com.github.laxika.magicalvibes.cards.b;
 
 import com.github.laxika.magicalvibes.model.CardColor;
-import com.github.laxika.magicalvibes.model.EffectSlot;
+import com.github.laxika.magicalvibes.model.ActivatedAbility;
 import com.github.laxika.magicalvibes.model.CardSubtype;
 import com.github.laxika.magicalvibes.model.CardType;
 import com.github.laxika.magicalvibes.model.GameData;
@@ -51,10 +51,10 @@ class BallistaSquadTest {
         assertThat(card.getPower()).isEqualTo(2);
         assertThat(card.getToughness()).isEqualTo(2);
         assertThat(card.getSubtypes()).containsExactly(CardSubtype.HUMAN, CardSubtype.REBEL);
-        assertThat(card.getEffects(EffectSlot.TAP_ACTIVATED_ABILITY)).hasSize(1);
-        assertThat(card.getEffects(EffectSlot.TAP_ACTIVATED_ABILITY).getFirst())
+        assertThat(card.getActivatedAbilities().get(0).getEffects()).hasSize(1);
+        assertThat(card.getActivatedAbilities().get(0).getEffects().getFirst())
                 .isInstanceOf(DealXDamageToTargetCreatureEffect.class);
-        assertThat(card.getTapActivatedAbilityCost()).isEqualTo("{X}{W}");
+        assertThat(card.getActivatedAbilities().get(0).getManaCost()).isEqualTo("{X}{W}");
     }
 
     // ===== Casting =====
